# Brahman

./: .gitattributes  .gitignore  Dockerfile  KARAKA_PAPER_DRAFT.md  LICENSE  README.md  SECURITY.md  SECURITY_GATE.md  brahman2.py  brahman_v2_task.md  brahman_v2_walkthrough.md  dataset.py  eval_benchmark.py  final_benchmark.py  golden_trainer.py  ingestion_engine.py  model.py  neural_bridge.py  railway.toml  reasoning_engine.py  requirements.txt  run.py  test_20_exploits.py  test_fletcher_ready.py  test_full_potential.py  tokenizer.py  train.py
.tmp_pipaudit/boolean_py-5.0.dist-info/: RECORD
.tmp_pipaudit/cachecontrol-0.14.3.dist-info/: RECORD
.tmp_pipaudit/charset_normalizer-3.4.7.dist-info/: RECORD
.tmp_pipaudit/cyclonedx_python_lib-9.1.0.dist-info/: RECORD
.tmp_pipaudit/license_expression-30.4.4.dist-info/: RECORD
.tmp_pipaudit/markdown_it_py-3.0.0.dist-info/: RECORD
.tmp_pipaudit/packageurl_python-0.17.6.dist-info/: RECORD
.tmp_pipaudit/pip-26.0.1.dist-info/: RECORD
agent/: __init__.py  brahman_agent.py  demo_scenarios.py
app/: __init__.py  main.py
brahman1/: run_week3_training.py  test_week1.py  test_week2.py  test_week3.py  test_week4.py
brahman_protocol/: Anchor.toml  package.json
brahman_protocol/programs/brahman_protocol/: Cargo.toml
brahman_protocol/programs/brahman_protocol/src/: lib.rs
evaluation/: real_benchmark.py
kernel/: brahman_kernel.py  crucible_test.py  karaka_protocol.schema.json  mlx_translator.py  sovereign_node.py  stress_test.py  test_kernel.py
tests/: adversarial_test.py
training/: data_gen.py
(+67 files in other folders)
