[package]
name = "brahman_protocol"
version = "0.1.0"
description = "Brahman Verification Protocol — On-Chain Consensus Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "brahman_protocol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
